# simplekv

./: Cargo.toml  README.md  build.rs
examples/: client.rs  dummy_server.rs  gen_cert.rs  server.rs
fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
proto/: api.proto
src/: error.rs  lib.rs
src/network/: frame.rs  mod.rs  stream.rs  tls.rs
src/pb/: mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs  sleddb.rs
