[package]
name = "simplekv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1" 
dashmap = "5.2.0"
http = "0.2.6"
prost = "0.8" 
thiserror = "1.0.30"
tracing = "0.1" 

[dev-dependencies]
anyhow = "1" 
async-prost = "0.2.1" 
futures = "0.3" 
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } 
tracing-subscriber = "0.2" 

[build-dependencies]
prost-build = "0.8" 
