[package]
name = "simplekv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1" 
dashmap = "5.2.0"
flate2 = "1.0.23"
futures = "0.3.21"
http = "0.2.6"
prost = "0.8" 
rustls-native-certs = "0.5"
sled = "0.34.7"
thiserror = "1.0.30"
tokio = { version = "1", features = [ "full" ] } 
tokio-rustls = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7.1", features = ["compat"] }
tracing = "0.1" 
tracing-subscriber = "0.2"
yamux = "0.10.1"

[dev-dependencies]
async-prost = "0.2.1" 
futures = "0.3" 
tempfile = "3.3.0"
certify = "0.3"

[build-dependencies]
prost-build = "0.8" 
